# livewire

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  render.yaml
backend/: pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 4ceaeee93438_align_legacy_schema_nullable_embedding_.py  52b5d3047141_initial_schema.py
backend/app/: briefing.py  config.py  database.py  llm.py  logging_config.py  main.py  middleware.py  models.py  schemas.py  similarity.py  story_classifier.py  tagger.py
backend/app/ingesters/: base.py  legistar.py  legistar_html.py  openstates.py  rss.py
backend/app/routers/: bills.py  collections.py  stories.py
backend/app/services/: bill_query.py  briefing_service.py  coalition_service.py  outcome.py  radar_service.py  stats_service.py  urgency.py
docs/: intelligence-platform-vision.md  svelte-migration-scope.md
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.json
frontend-react/: pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
frontend-react/src/: App.tsx  api.ts  types.ts
frontend-svelte/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend-svelte/src/: App.svelte  CoalitionView.svelte  CollectionView.svelte  Dashboard.svelte  RadarView.svelte  StoriesView.svelte  index.css
frontend/src/: App.svelte  App.tsx  CoalitionView.svelte  CollectionView.svelte  Dashboard.svelte  RadarView.svelte  StoriesView.svelte  api.ts  index.css  main.ts  main.tsx  types.ts
frontend/src/lib/: toast-key.ts
(+106 files in other folders)
