[project]
name = "bill-tracker"
version = "0.1.0"
description = "Legislative bill tracker with Legistar integration"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "pydantic-settings>=2.5.0",
    "numpy>=1.26.0",
    "feedparser>=6.0.0",
]
